added, stabilization, fixed, if not connected FITT360 and app terminated, app crashed, added, to check connected FITT360 when WIFI AP applied

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -249,6 +249,8 @@
 
     <string name="audio_disable">Muted</string>
     <string name="audio_enable">Mute</string>
+    <string name="stable_on">Stable On</string>
+    <string name="stable_off">Stable Off</string>
 
     <string name="distance_near">Inside</string>
     <string name="distance_far">Outdoor</string>
