fixed, server socket broken when rndis connect and disconnect immediately, added, bluetooth adapter multiple listener, removed, if you make bonded none and found the bluetooth during discovery, call request bluetooth pairing. this step is unnessary because fitt360 is not paring mode

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -311,4 +311,6 @@
 
     <string name="samsung_vr_connect_msg">Do you want watch this content with SAMSUNG VR app?</string>
     <string name="reconnecting_cnt">Reconnecting %d ...</string>
+
+    <string name="bt_status_off">Please, check bluetooth enabled</string>
 </resources>
